--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@ main {
   box-shadow: 0em 0em 0.5em rgb(107, 83, 50);
   flex-wrap: wrap;
   padding: 1em;
-  max-width: 400px;
+  max-width: 600px;
 }
 
 svg {
@@ -70,19 +70,27 @@ svg rect {
   background-color: rgb(183, 151, 110);
 }
 
-#svgPreview {
+#svgPreview, #svgHold {
   background-color: rgb(218, 180, 131);
 }
+
 
 #info {
   width: 160px;
   margin-top: 1em;
 }
 
-#info > .text {
+#info > .text{
   font-weight: bold;
 }
 
+#sideBar > .text{
+  font-weight: bold;
+  text-align: center;
+  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 .left {
   font-size: 1.1em;
   float: left;
